# HTLL-IR-framework

./: .gitignore  README.md  jlab.sh  main.py  pyproject.toml
.jupyter/config/: migrated
.jupyter/config/lab/workspaces/: auto-5-7d69.jupyterlab-workspace  default-37a8.jupyterlab-workspace
.jupyter/data/: nbsignatures.db  notebook_secret
.jupyter/runtime/: jupyter_cookie_secret
_helper/celery-patterns/: notes.txt
_helper/celery-patterns/0_nobackend/app/: cclient.py  colorlogger.py  cworker.py
_helper/celery-patterns/3_bestpractice/: .env.example
_helper/celery-patterns/4_markdowns/: advanced.md  basics.md  failures.md  faqs.md  scaling.md  server-sockets.md
_helper/celery-patterns/markdowns/: faqs.md  links.md
assets/: designs.drawio
proxy/: gemini-proxy-server.py  gemini-proxy-usage.ipynb  proxy2proxy.py
raw/components/: distributor.py  enquiry.py  orchestrator.py  worker.py  writer.py
raw/config/: config.yaml  loader.py
raw/models/: task.py
raw/utils/: logger.py
v0/: asynclane.py  config.yaml  logger.py  main.py  mocker.py  models.py  ndjson.py  writer.py
v0/outputs/: logs.ndjson  resutls.ndjson
v1/: celery_main.py  design.drawio  design.txt  docker-compose.yml  installations.md
v1/_helper/: gemini-agents.ipynb  gemini-langchain.ipynb  graph-decompostion.ipynb  investigation-agent.ipynb  langgraph-fun.ipynb  log_module_test.ipynb  lsh-vectorstore.ipynb
v1/qdrant/_helper/: lsh-vectorstore.ipynb  test-connectivty-Copy1.ipynb
v1/qdrant/server/: docker-compose.yaml
v1/qdrant/src/: log_ingestion_handler.py  lookup_db_store.py
(+84 files in other folders)
