[project]
name = "htll-ir-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asyncio>=4.0.0",
    "celery>=5.6.2",
    "colorlog>=6.10.1",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "google-genai>=1.47.0",
    "google-generativeai>=0.8.6",
    "ipykernel>=6.31.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.2",
    "langchain-google-genai>=2.0.10",
    "langgraph>=0.6.11",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "orjson>=3.11.5",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.16.1",
    "tqdm>=4.67.1",
]
